Quartz sync: Aug 27, 2024, 1:25 PM

--- a/content/Literature/240729 FOSM.md
+++ b/content/Literature/240729 FOSM.md
@@ -1,10 +1,13 @@
-  
+---
+title: FOSM
+draft: false
+tags:
+---
 ### Approximation of Mean  
 - **A random variable in terms of deterministic and stochastic components is given by** 
 $$
 X=\bar X+\tilde X
 $$
-
 	Here we assume that $E[X]=\bar X$ and $E[\tilde X]=0$
 - **Using first order Taylor Polynomial**
 
