Quartz sync: Aug 27, 2024, 11:17 PM

--- a/content/Literature/240729 FOSM.md
+++ b/content/Literature/240729 FOSM.md
@@ -17,7 +17,7 @@ $$
 
 - **Expectation** 
 $$
-\end{align} 
+\begin{align} 
 \mathbb E[ \mathcal{M}(\bar{X})+\mathcal{M}^{\prime}(\bar{X}) \tilde{X}]&= \mathbb E[ \mathcal{M}(\bar{X})]+\mathbb E[\mathcal{M}^{\prime}(\bar{X}) \tilde{X}]\\
 & = \mathcal{M}(\bar{X})+\mathcal{M}^{\prime}(\bar{X}) \cancelto{0}{\mathbb E [\tilde{X}]}\\
 \end{align}
