Quartz sync: Oct 4, 2024, 8:19 PM

--- a/content/Literature/Oct 8, 2024.md
+++ b/content/Literature/Oct 8, 2024.md
@@ -6,4 +6,4 @@ date: 2024-10-08
 ---
 - [ ]  Equation 1 give the conservation of species. It models the change in the concentration of CO2. How do we link this with the behaviour of the adsorbent. Not only that, how do you model the reduction of adsorption capability as the volume inside the honeycomb reduces. 
 - [ ] Acc. to incorpera pg. 976, the conservation of species equation has a Production term. The DAC equations omit this. 
-- [ ] 
+- [ ] Get the boundary conditions for the case
